--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,7 @@
 	<title>Login</title>
 </head>
 <body>
+<form id="loginForm">
 	<header>
 		<h1>Login</h1>		
 	</header>
@@ -15,7 +16,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <button type="submit">Login</button>
+    <button type="submit"><a href="file:///C:/Users/danie/OneDrive/Documents/NAU%20work/CS/CS312/Group%20project/Phase%201/welcome.html">Login</a></button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
@@ -26,5 +27,6 @@
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
+<script src="app.js"></script>
 </body>
 </html>
