--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <button type="submit"><a href="file:///C:/Users/danie/OneDrive/Documents/NAU%20work/CS/CS312/Group%20project/Phase%201/welcome.html">Login</a></button>
+    <button type="submit"><a href="index.html">Login</a></button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
