--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
         <input type="text" id="email" name="email" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <button type="submit"><a href="file:///C:/Users/danie/OneDrive/Documents/NAU%20work/CS/CS312/Group%20project/Phase%201/Login.html#">Sign Up</a></button>
+        <button type="submit"><a href="index.html#">Sign Up</a></button>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
 <div id="message">
