--- a/Login.html
+++ b/Login.html
@@ -23,10 +23,10 @@
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
+    <button type="button" class="cancelbtn" onclick="document.location='index.html'">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
-<script src="app.js"></script>
+<script src=".js"></script>
 </body>
 </html>
