--- a/Login.html
+++ b/Login.html
@@ -27,6 +27,6 @@
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
-<script src=".js"></script>
+<script src="app.js"></script>
 </body>
 </html>
