--- a/manager_users.html
+++ b/manager_users.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page</title>
+    <title>Manage Users</title>
     <link rel="stylesheet" type="text/css" href="signup.css" />
 </head>
 <body>
